/***********************************************************************
 X3 ChangeLog

2006-08-19  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: added reply command, which responds similar to calc,
	but with any message. (for use with bindings)

	* src/modcmd.c: enabled the ability to use $a $n and $m in BIND, which
	are replaced with the target command's calling user's account, nick,
	and numnick respectively. This and the above allows things like:
	BIND x3 account x3.reply your account is $a   or
	BIND x3 kickme  x3.kick $n $1-
	more to come, maybe, later.

2006-08-01  Alex Schumann  <rubin@afternet.org>

	* src/modcmd.c: Added OSI certification message to VERSION command

2006-08-09  Neil Spierling  <sirvulcan@gmail.com>

	* x3.conf.example: Redid part of the geoip summary.

2006-08-09  Neil Spierling  <sirvulcan@gmail.com>

	* src/opserv.c: If we have a city, latitude and longitude returned
	then show a map url. Some results have no city but a latitude and
	a longitude. The coordinates are useless in this case and most
	people would know where the country is around abouts.

2006-08-08  Neil Spierling  <sirvulcan@gmail.com>

	* src/hash.c: Speed up city and country lookups significantly.
	Just slow for the first read but once thats done the rest is fast.

2006-08-08  Neil Spierling  <sirvulcan@gmail.com>

	* src/spamserv.c: Fix a crash in spamserv (Tracker# 1535968).
	I dont know if this will work for sure as i cant reproduce it. But
	my theory is that once the user is kicked the mode node is dropped.
	Users without modes should still return a valid mode node.

2006-08-08  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Fixed a crash with giveownership. X3 would crash
	if a giveownership command was issued in a channel with no owners.

2006-08-07  Neil Spierling  <sirvulcan@gmail.com>

	* configure: Regenerated.

	* configure.in: Added checks for GeoIP headers and libs.

	* x3.conf.example: Add in 2 options for the dat filenames of the